# comscore_task

./: .gitignore  README.md  pyproject.toml
.dvc/: config
comscore_task/: eval_model.py  settings.py  utils.py
notebooks/: data_analysis.ipynb  tfidf_classification.ipynb
storage/data/: .gitignore  train_data.parquet.dvc  val_data_platform.parquet.dvc  val_data_post_content.parquet.dvc
storage/models/: .gitignore  svd.pkl.dvc  tfidf_vectorizer.pkl.dvc  xgb_model.pkl.dvc
tests/: test_comscore_task.py
