[tool.poetry]
name = "comscore_task"
version = "0.1.0"
description = ""
authors = ["Wojciech Korczyński <wojtek19962a32@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.4"
scikit-learn = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.961"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
