[tool.poetry]
name = "comscore_task"
version = "0.1.0"
description = ""
authors = ["Wojciech Korczyński <wojtek19962a32@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.4"
scikit-learn = "^1.1.1"
notebook = "^6.4.12"
seaborn = "^0.11.2"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
pyarrow = "^8.0.0"
langdetect = "^1.0.9"
tqdm = "^4.64.0"
ipywidgets = "^7.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.961"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
